--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>Hello World</h1> 
-        <p>I'm hosted with GitHub Pages.</p>
+        <h1>RIP</h1> 
+        <p>Trying... Dying...</p>
     </body>
 </html>
