--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        <h1>RIP</h1> 
-        <p>Trying... Dying...</p>
     </body>
+    <script src="src/index.js"></script>
 </html>
