--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     </head>
     <body>
     </body>
-    <script src="/src/Components/signup.js"></script>
+    <script src="index.js"></script>
 </html>
