--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CryptDive</title>
     </head>
-    <body>
+    <body> 
+        <h2>Website in progress...</h2>
     </body>
-    <script src="index.js"></script>
 </html>
