--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>CryptDive</title> 
     </head>
     <body> 
-        <h2>Website in progress...</h2>
+        <h2>Website in progress...</h2> 
+        <p>Testing Space</p> 
+        <pre id="questionPosts"></pre> 
+        <script src="restMain.js"></script>
     </body>
 </html>
