REST API with MySQL

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body> 
         <h2>Website in progress...</h2> 
         <p>Testing Space</p> 
-        <pre id="questionPosts"></pre> 
+        <pre id="questions"></pre> 
         <script src="restMain.js"></script>
     </body>
 </html>
