--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <h2>Website in progress...</h2> 
         <p>Testing Space</p> 
         <pre id="questions"></pre> 
-        <script src="restMain.js"></script>
+        <script src="restServer.js"></script>
     </body>
 </html>
