--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CryptDive</title> 
+        <title>CryptDive Home</title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body> 
-        <h2>Website in progress...</h2> 
-        <p>Testing Space</p> 
-        <pre id="questions"></pre> 
-        <script src="restServer.js"></script>
+        <header>
+            <nav class="navbar">
+                <button id="signup"></button>
+                <button id="login"></button>
+            </nav>
+        </header>
+
+        <main>
+            <article>
+                <h2>Website in progress...</h2> 
+                <p>Testing Space</p>
+            </article>
+            
+            <script src="restAPI.js"></script>
+        </main>
     </body>
 </html>
