--- a/webpages/dashboard.html
+++ b/webpages/dashboard.html
@@ -12,7 +12,7 @@
         <header>
             <nav class="header-menu">
                 <a href="tags.html">
-                    <i class="fas fa-tag"></i>
+                    <i class="material-icons">label</i>
                 </a>
                 <a href="achievements.html">
                     <i class="fas fa-trophy"></i>
