--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CryptDive Home</title>
+        <link href="style.css" rel="stylesheet" type="text/css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body> 
         <header>
-            <nav class="navbar">
+            <nav id="authnav">
                 <button id="signup"></button>
                 <button id="login"></button>
             </nav>
