--- a/webpages/dashboard.html
+++ b/webpages/dashboard.html
@@ -4,25 +4,34 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CryptDive | Dashboard</title>
-        <link href="style.css" rel="stylesheet" type="text/css"/>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+        <link href="webpages.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
     <body>
         <header>
-            <nav class="header-menu">
-                <a href="tags.html">
-                    <i class="material-icons">label</i>
-                </a>
-                <a href="achievements.html">
-                    <i class="fas fa-trophy"></i>
-                </a>
-                <a href="questions.html">
-                    <i class="far fa-edit"></i>
-                </a>
-                <a href="profile.html">
-                    <i class="fas fa-user-alt"></i>
-                </a>
+            <nav>
+                <ul>
+                    <li class="header-menu">
+                        <a href="tags.html">
+                            <i class="material-icons">label</i>
+                        </a>
+                    </li>
+                    <li class="header-menu">
+                        <a href="achievements.html">
+                            <i class="material-icons">emoji_events</i>
+                        </a>
+                    </li>
+                    <li class="header-menu">
+                        <a href="questions.html">
+                            <i class="material-icons">create</i>
+                        </a>
+                    </li>
+                    <li class="header-menu">
+                        <a href="profile.html">
+                            <i class="material-icons">account_circle</i>
+                        </a>
+                    </li>
+                </ul>
             </nav>
         </header>
         <main></main>
