--- a/webpages/tags.html
+++ b/webpages/tags.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CryptDive | Tags</title>
+    <link href="webpages.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li class="header-menu">
+                    <a href="tags.html">
+                        <i class="material-icons">label</i>
+                    </a>
+                </li>
+                <li class="header-menu">
+                    <a href="achievements.html">
+                        <i class="material-icons">emoji_events</i>
+                    </a>
+                </li>
+                <li class="header-menu">
+                    <a href="questions.html">
+                        <i class="material-icons">create</i>
+                    </a>
+                </li>
+                <li class="header-menu">
+                    <a href="profile.html">
+                        <i class="material-icons">account_circle</i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main></main>
 </body>
 </html>
