--- a/webpages/questions.html
+++ b/webpages/questions.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CryptDive | Question Posts</title>
-    <link href="webpages.css" rel="stylesheet" type="text/css">
+    <title>CryptDive | Questions</title>
+    <link href="https://fonts.googleapis.com/css?family=Metrophobic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="windows.css">
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li class="header-menu">
-                    <a href="tags.html">
-                        <i class="material-icons">label</i>
-                    </a>
-                </li>
-                <li class="header-menu">
-                    <a href="achievements.html">
-                        <i class="material-icons">emoji_events</i>
-                    </a>
-                </li>
-                <li class="header-menu">
-                    <a href="questions.html">
-                        <i class="material-icons">create</i>
-                    </a>
-                </li>
-                <li class="header-menu">
-                    <a href="profile.html">
-                        <i class="material-icons">account_circle</i>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main></main>
+    <div class="topnav">
+        <a class="b" href="dashboard.html">
+            <span style="font-family:Metrophobic,sans-serif;font-size:20px;">CryptDive</span>
+        </a>
+        <li>
+            <a class="bar" href="profile.html">
+                <i class="material-icons md-default_type">account_circle</i></a>
+        </li>
+        <li>
+            <a class="bar" href="questions.html">
+                <i class="material-icons md-default_type">assignment</i>
+            </a>
+        </li>
+        <li>
+            <a class="bar" href="achievements.html">
+                <i class="material-icons md-default_type">emoji_events</i>
+            </a>
+        </li>
+        <li>
+            <a class="bar" href="tags.html">
+                <i class="material-icons md-default_type">label</i>
+            </a>
+        </li>
+    </div>
+    </div>
 </body>
+
 </html>
