--- a/webpages/dashboard.html
+++ b/webpages/dashboard.html
@@ -6,13 +6,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CryptDive | Dashboard</title>
+    <link href="https://fonts.googleapis.com/css?family=Metrophobic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="windows.css">
 </head>
 
 <body>
     <div class="topnav">
-        <a class="b" href="dashboard.html">CryptDive</a>
+        <a class="b" href="dashboard.html">
+            <span id="title">CryptDive</span>
+        </a>
         <li>
             <a class="bar" href="profile.html">
                 <i class="material-icons md-default_type">account_circle</i></a>
