--- a/webpages/questions.html
+++ b/webpages/questions.html
@@ -14,7 +14,7 @@
 <body>
     <div class="topnav">
         <a class="b" href="dashboard.html">
-            <span style="font-family:Metrophobic,sans-serif;font-size:20px;">CryptDive</span>
+            <span id="title">CryptDive</span>
         </a>
         <li>
             <a class="bar" href="profile.html">
