--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CryptDive Home</title>
-        <link href="main.css" rel="stylesheet" type="text/css"/>
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    </head>
-    <body> 
-        <header>
-            <nav>
-                <button></button>
-                <button></button>
-            </nav>
-        </header>
 
-        <main>
-            <article>
-                <h2>Website in progress...</h2> 
-                <p>Testing Space</p>
-            </article>
-            
-            <script src="restAPI.js"></script>
-        </main>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CryptDive</title>
+    <link href="https://fonts.googleapis.com/css?family=Metrophobic" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+
+<body>
+    <div class="topnav">
+        <a class="b" href="dashboard.html">
+            <span id="title">CryptDive</span>
+        </a>
+        <li>
+            <a class="bar" href="test register.html">
+                <button></button>
+        </li>
+        <li>
+            <a class="bar" href="test-login.html">
+                <button></button>
+            </a>
+        </li>
+    </div>
+    </div>
+</body>
+
 </html>
