--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,20 +12,21 @@
 
 <body>
     <div class="topnav">
-        <a class="b" href="dashboard.html">
+        <a class="b" href="index.html">
             <span id="title">CryptDive</span>
         </a>
-        <li>
-            <a class="bar" href="test register.html">
-                <button></button>
+        <li class="bar">
+            <a href="test-register.html">
+                <button class="button sign-up" >Sign Up</button>
+            </a>
         </li>
-        <li>
-            <a class="bar" href="test-login.html">
-                <button></button>
+        <li class="bar">
+            <a href="test-login.html">
+                <button class="button log-in">Log In</button>
             </a>
         </li>
     </div>
-    </div>
+
 </body>
 
 </html>
