--- a/test-login.html
+++ b/test-login.html
@@ -16,18 +16,18 @@
 </head>
 
 <body>
-    <main id="main-holder">
+    <main class="main-holder login">
         <h1>Login</h1>
         <b>Please log in to enter</b>
 
-        <div id="login-error-msg-holder">
-            <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+        <div id="error-msg-holder">
+            <p id="error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
         </div>
 
-        <form id="login-form">
-            <input type="text" name="username" class="login-form-field" placeholder="Username">
-            <input type="password" name="password" class="login-form-field" placeholder="Password">
-            <input type="submit" value="Login" id="login-form-submit">
+        <form id="form-body">
+            <input type="text" name="username" class="form-field" placeholder="Username">
+            <input type="password" name="password" class="form-field" placeholder="Password">
+            <input type="submit" value="Login" id="form-submit">
         </form>
 
     </main>
