--- a/webpages/tags.html
+++ b/webpages/tags.html
@@ -13,9 +13,13 @@
 
 <body>
     <div class="topnav">
+        <img class="logo" src="https://i.imgur.com/scZ7k93.png">
         <a class="b" href="dashboard.html">
             <span id="title">CryptDive</span>
         </a>
+        <li>
+            <button class="logoutbutton">Log Out</button>
+        </li>
         <li>
             <a class="bar" href="profile.html">
                 <i class="material-icons md-default_type">account_circle</i></a>
