--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <div class="topnav">
+        <img class="logo" src="https://i.imgur.com/scZ7k93.png">
         <a class="b" href="index.html">
             <span id="title">CryptDive</span>
         </a>
