--- a/testing.html
+++ b/testing.html
@@ -28,36 +28,36 @@
         </li>
     </div>
 
-    <main id="main-holder">
+    <main class="main-holder login">
         <h1>Login</h1>
         <b>Please log in to enter</b>
 
-        <div id="login-error-msg-holder">
-            <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+        <div id="error-msg-holder">
+            <p id="error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
         </div>
 
-        <form id="login-form">
-            <input type="text" name="username" class="login-form-field" placeholder="Username">
-            <input type="password" name="password" class="login-form-field" placeholder="Password">
-            <input type="submit" value="Login" id="login-form-submit">
+        <form id="form-body">
+            <input type="text" name="username" class="form-field" placeholder="Username">
+            <input type="password" name="password" class="form-field" placeholder="Password">
+            <input type="submit" value="Login" id="form-submit">
         </form>
 
     </main>
 
-    <main id="main-holder">
+    <main class="main-holder signup">
         <h1>Sign Up</h1>
         <b>Fill in the details to sign up.</b>
 
-        <div id="login-error-msg-holder">
-            <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
+        <div id="error-msg-holder">
+            <p id="error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
         </div>
 
-        <form id="login-form">
-            <input type="text" name="username" class="login-form-field" placeholder="Username">
-            <input type="text" name="email" class="login-form-field" placeholder="Email Address">
-            <input type="password" name="password" class="login-form-field" placeholder="Password">
-            <input type="password" name="confirmpassword" class="login-form-field" placeholder="Confirm Password">
-            <input type="submit" value="Sign Up" id="login-form-submit">
+        <form id="form-body">
+            <input type="text" name="username" class="form-field" placeholder="Username">
+            <input type="text" name="email" class="form-field" placeholder="Email Address">
+            <input type="password" name="password" class="form-field" placeholder="Password">
+            <input type="password" name="confirmpassword" class="form-field" placeholder="Confirm Password">
+            <input type="submit" value="Sign Up" id="form-submit">
         </form>
 
     </main>
