--- a/webpages/tags copy.html
+++ b/webpages/tags copy.html
@@ -5,10 +5,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CryptDive | Profile</title>
+    <title>CryptDive | Tags</title>
     <link href="https://fonts.googleapis.com/css?family=Metrophobic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="windows.css">
+    <link rel="stylesheet" type="text/css" href="windows-test.css">
 </head>
 
 <body>
@@ -41,8 +41,10 @@
         </li>
     </div>
 
-    <div>
-        
+    <div class="row">
+        <div class="column side"></div>
+        <div class="column middle"></div>
+        <div class="column side"></div>
     </div>
 </body>
 
