--- a/webpages/achievements.html
+++ b/webpages/achievements.html
@@ -40,6 +40,8 @@
             </a>
         </li>
     </div>
+
+    <img class="achievements" src="https://i.imgur.com/BH6pins.jpg">
 </body>
 
 </html>
