--- a/webpages/questions.html
+++ b/webpages/questions.html
@@ -40,6 +40,8 @@
             </a>
         </li>
     </div>
+
+    <img class="questions" src="https://i.imgur.com/vlmVbJu.jpg">
 </body>
 
 </html>
