--- a/webpages/dashboard.html
+++ b/webpages/dashboard.html
@@ -40,6 +40,8 @@
             </a>
         </li>
     </div>
+
+    <img class="mainpage" src="https://i.imgur.com/jZReFwR.jpg">
 </body>
 
 </html>
