--- a/webpages/profile.html
+++ b/webpages/profile.html
@@ -41,9 +41,7 @@
         </li>
     </div>
 
-    <div>
-        
-    </div>
+    <img class="profile" src="https://i.imgur.com/sSVAcuN.jpg">
 </body>
 
 </html>
